--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <script>
     let navOpt;
     let pageSec;
+    let prelaoder;
     function onloadFunk() {
       prelaoder = document.querySelector('.preloader');
       prelaoder.style.display = 'none'
