--- a/public/index.html
+++ b/public/index.html
@@ -23,14 +23,15 @@
 </head>
 </head>
 
-<body onload="onloadFunk()">
+<body>
+<!-- <body onload="onloadFunk()"> -->
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
+  <!-- <script>
     let navOpt;
     let pageSec;
     let prelaoder;
@@ -55,7 +56,9 @@
       // offset: 200,
       duration: 700
     });
-  </script>
+  </script> -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
